src/objects/DSCORGPKG__DiscoverOrg_AutoUpdate_Log__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Error_Messages__c</fullName>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Records_Failed__c</fullName>
        <label>Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Records_Submitted__c</fullName>
        <label>Records Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Records_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DiscoverOrg AutoUpdate Log</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>DiscoverOrg AutoUpdate Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg AutoUpdate Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>